Bug 388917 - Can't browse through PackageKit source; page says "Sorry, nothing found..."
Summary: Can't browse through PackageKit source; page says "Sorry, nothing found..."
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: PackageKit (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-13 17:02 UTC by Nate Graham
Modified: 2018-10-01 15:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Flatpak backend looks empty (273.35 KB, image/png)
2018-01-13 17:02 UTC, Nate Graham
Details
Neon PackageKit backend looks empty (281.83 KB, image/png)
2018-01-13 17:04 UTC, Nate Graham
Details
Not here (353.77 KB, image/png)
2018-01-17 15:22 UTC, Aleix Pol
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2018-01-13 17:02:28 UTC
Created attachment 109839 [details]
Flatpak backend looks empty

Discover with the Snap, Flatpak, and PackageKit backends compiled from git master on KDE Neon

When I navigate to the Settings page and click on any list item for a particular backend, Discover takes me to a page that says "Sorry, nothing found..."
Comment 1 Nate Graham 2018-01-13 17:04:36 UTC
Created attachment 109840 [details]
Neon PackageKit backend looks empty
Comment 2 Nate Graham 2018-01-13 17:44:02 UTC
Correction: this only affects the PackageKit backend. Flatpak works.
Comment 3 Aleix Pol 2018-01-17 15:22:10 UTC
Created attachment 109939 [details]
Not here

Maybe you are trying a repository that doesn't have any packages with appstream information?
Comment 4 Nate Graham 2018-01-18 19:39:53 UTC
KDE Neon sets up multiple repos (like all Ubuntu-based distros) and this reproduces for all of them. I know that there's AppStream info the PackageKit-supplied apps that come from them.
Comment 5 Nate Graham 2018-01-26 20:07:23 UTC
FWIW, this reproduces on my Kubuntu machine, so it's not just Neon. Looks like Ubuntu packaging in general is affected (maybe even all Debian-based packaging, but I don't have a Debian machine handy to test with right now).
Comment 6 Øystein Steffensen-Alværvik 2018-02-11 10:55:53 UTC
Can confirm this on Neon LTS 5.12. Reproduced the same way as OP (flathub works).
Comment 7 Aleix Pol 2018-10-01 15:28:56 UTC
Git commit 1ee7ec0f95a90cfdcd4de03c5c44f22dc4a3bea5 by Aleix Pol.
Committed on 01/10/2018 at 15:27.
Pushed by apol into branch 'Plasma/5.14'.

Only allow backends with proper source awareness to filter

PackageKit gives us different ids for the source, so we can't reliably
filter.

M  +1    -0    discover/qml/SourcesPage.qml
M  +1    -0    libdiscover/backends/FlatpakBackend/FlatpakSourcesBackend.h
M  +2    -0    libdiscover/resources/AbstractSourcesBackend.h

https://commits.kde.org/discover/1ee7ec0f95a90cfdcd4de03c5c44f22dc4a3bea5