Only allow backends with proper source awareness to filter

PackageKit gives us different ids for the source, so we can't reliably
filter.

BUG: 388917